Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>Test</li>
+<li>New Tiddler</li>
 
 </ul>
 </p>
@@ -10769,7 +10769,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200618013508693" list="" modified="20200618013553124" title="$:/StoryList">
+<div created="20200618013508693" list="[[New Tiddler]]" modified="20200618013751683" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10830,7 +10830,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200618013536116" modified="20200618013536674" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618013536116" modified="20200618013658149" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>Test</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -10942,8 +10942,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200618012919816" modified="20200618012926786" tags="" title="Test">
-<pre>test</pre>
+<div created="20200618013756502" modified="20200618013807203" tags="" title="New Tiddler">
+<pre>This is my new Tiddler</pre>
 </div>
 
 
