Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -197,8 +197,6 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>New Tiddler</li>
-
 </ul>
 </p>
 
@@ -10760,16 +10758,16 @@ Error message and password prompt
 <div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" modified="20200618013643934" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200527074318200" modified="20200618012938407" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200618012538037" modified="20200618013643390" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/General</pre>
+<div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200618013508693" list="[[New Tiddler]]" modified="20200618013751683" title="$:/StoryList">
+<div created="20200618014047749" list="$:/core/ui/SideBar/Recent" modified="20200618014050057" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10830,7 +10828,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200618013536116" modified="20200618013658149" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" modified="20200618014050419" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>Test</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -10941,9 +10939,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200618013756502" modified="20200618013807203" tags="" title="New Tiddler">
-<pre>This is my new Tiddler</pre>
 </div>
 
 
