--- a/index.html
+++ b/index.html
@@ -9824,8 +9824,8 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20200618015001145" modified="20200618015001145" title="$:/palette">
-<pre>$:/palettes/SolarizedLight</pre>
+<div created="20200618015001145" modified="20200618020355946" title="$:/palette">
+<pre>$:/palettes/Twilight</pre>
 </div>
 <div author="Flibbles" core-version="&gt;=5.1.14" created="20200526001805463" demo="http://flibbles.github.io/tw5-relink/" dependents="" description="Flexibility when relinking renamed tiddlers" list="readme configuration" name="Relink" plugin-type="plugin" source="https://github.com/flibbles/tw5-relink" title="$:/plugins/flibbles/relink" type="application/json" version="1.10.0">
 <pre>{
@@ -11247,14 +11247,14 @@ Error message and password prompt
 <div created="20200527074355500" modified="20200618012835356" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200618015239429" modified="20200618015240605" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
+<div created="20200618015239429" modified="20200618020319257" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
 <div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" modified="20200618015237513" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200527074318200" modified="20200618020321501" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -11262,7 +11262,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200618015802813" list="$:/core/ui/SideBar/Recent [[How to add the 'Cc' field and 'Important flag' in an email sent by Python 3]]" modified="20200618015824081" title="$:/StoryList">
+<div created="20200618015802813" list="[[How to add the 'Cc' field and 'Important flag' in an email sent by Python 3]]" modified="20200618020413450" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12279,7 +12279,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" modified="20200618015824584" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" modified="20200618020413870" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>How to add the 'Cc' field and 'Important flag' in an email sent by Python 3</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
