--- a/index.html
+++ b/index.html
@@ -11262,7 +11262,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200618015802813" list="[[How to add the 'Cc' field and 'Important flag' in an email sent by Python 3]]" modified="20200618020413450" title="$:/StoryList">
+<div created="20200618015802813" list="" modified="20200618023856601" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
