Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>D'sTiddlyWiki â€” a non-linear personal web notebook</title>
+<title>í ¼í¼žTiddlyWiki â€” a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -11237,8 +11237,8 @@ Error message and password prompt
 <div created="20200527084433269" modified="20200527084433732" title="$:/plugins/tobibeer/preview/defaults/delay">
 <pre>200</pre>
 </div>
-<div created="20200618012844720" modified="20200618012845127" title="$:/SiteTitle">
-<pre>D'sTiddlyWiki</pre>
+<div created="20200618012844720" creator="debby" modified="20200618085705647" modifier="debby" title="$:/SiteTitle">
+<pre>í ¼í¼žTiddlyWiki</pre>
 </div>
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
@@ -11267,7 +11267,7 @@ Error message and password prompt
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618053004101" creator="debby" list="" modified="20200618053015030" modifier="debby" title="$:/StoryList">
+<div created="20200618085611859" creator="debby" list="$:/ControlPanel GettingStarted" modified="20200618085611859" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11315,11 +11315,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;412&quot;
+            &quot;text&quot;: &quot;1280&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;869&quot;
+            &quot;text&quot;: &quot;720&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
