--- a/index.html
+++ b/index.html
@@ -413,6 +413,8 @@ Error message and password prompt
 
 <li>How to add the 'Cc' field and 'Important flag' in an email sent by Python 3</li>
 
+<li>Welcome</li>
+
 </ul>
 </p>
 
@@ -11267,7 +11269,7 @@ Error message and password prompt
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618085611859" creator="debby" list="$:/ControlPanel GettingStarted" modified="20200618085611859" modifier="debby" title="$:/StoryList">
+<div created="20200618085611859" creator="debby" list="Welcome" modified="20200618085611859" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12403,6 +12405,11 @@ from email.mime.text import MIMEText
 message['Cc'] = ''
 message['X-Priority'] = '2'
 ```</pre>
+</div>
+<div created="20200618090057764" creator="debby" modified="20200618090303976" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
+<pre>Hi, welcome to my digital garden. í ½í±‹
+
+I will provide better directions as content accumulates here.</pre>
 </div>
 
 
