--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/GitHub/Branch</li>
 
 <li>$:/GitHub/Filename</li>
@@ -9805,6 +9807,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20200618090318580" creator="debby" modified="20200618090320949" modifier="debby" title="$:/DefaultTiddlers">
+<pre>Welcome</pre>
+</div>
 <div created="20200618012714902" modified="20200618013205499" title="$:/GitHub/Branch">
 <pre>gh-pages</pre>
 </div>
@@ -11269,7 +11274,7 @@ Error message and password prompt
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618085611859" creator="debby" list="Welcome" modified="20200618085611859" modifier="debby" title="$:/StoryList">
+<div created="20200618085611859" creator="debby" list="Welcome" modified="20200618090344545" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12286,7 +12291,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" modified="20200618032656263" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" creator="debby" modified="20200618090336937" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>How to add the 'Cc' field and 'Important flag' in an email sent by Python 3</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -12406,10 +12411,12 @@ message['Cc'] = ''
 message['X-Priority'] = '2'
 ```</pre>
 </div>
-<div created="20200618090057764" creator="debby" modified="20200618090303976" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
+<div created="20200618090057764" creator="debby" modified="20200618090431946" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
 <pre>Hi, welcome to my digital garden. í ½í±‹
 
-I will provide better directions as content accumulates here.</pre>
+I will provide better directions as content accumulates here.
+
+[[GettingStarted]]</pre>
 </div>
 
 
