Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -11274,7 +11274,7 @@ Error message and password prompt
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618085611859" creator="debby" list="Welcome" modified="20200618090344545" modifier="debby" title="$:/StoryList">
+<div created="20200618085611859" creator="debby" list="Welcome" modified="20200618090433648" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12411,12 +12411,10 @@ message['Cc'] = ''
 message['X-Priority'] = '2'
 ```</pre>
 </div>
-<div created="20200618090057764" creator="debby" modified="20200618090431946" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
+<div created="20200618090057764" creator="debby" modified="20200618090518625" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
 <pre>Hi, welcome to my digital garden. í ½í±‹
 
-I will provide better directions as content accumulates here.
-
-[[GettingStarted]]</pre>
+I will provide better directions as content accumulates here.</pre>
 </div>
 
 
