Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -11276,7 +11276,7 @@ Error message and password prompt
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618085611859" creator="debby" list="[[From collector to creator]] Welcome" modified="20200618090550429" modifier="debby" title="$:/StoryList">
+<div created="20200618085611859" creator="debby" list="[[From collector to creator]] Welcome" modified="20200618092031501" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12418,12 +12418,12 @@ message['Cc'] = ''
 message['X-Priority'] = '2'
 ```</pre>
 </div>
-<div created="20200618090057764" creator="debby" modified="20200618091927540" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
+<div created="20200618090057764" creator="debby" modified="20200618092053273" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
 <pre>Hi, welcome to my digital garden. í ½í±‹
 
 I will provide better directions as content accumulates here.
 
-[[From collector to creator]]</pre>
+GettingStarted</pre>
 </div>
 
 
