Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -12405,10 +12405,12 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
     }
 }</pre>
 </div>
-<div created="20200618091714228" creator="debby" modified="20200618091907720" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
+<div created="20200618091714228" creator="debby" modified="20200618092450868" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
 <pre>Many note-takers hoard content because it gives them an illusion of knowledge. The best way to truly understand anything is to use the generation effect: to produce your own content, in your own words, and to share it with the world to create a feedback loop.    Collect. Note-taking, raw snippets, Kindle highlights + personal commentary.    Connect. Link to previous notes. Do not keep orphan notes.    Create. Write 
 
-â€” via [From collector to creator â€¢ Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator)</pre>
+â€” via [From collector to creator â€¢ Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator)
+
+[[in-text way of referring to a note|Actual title of the note]]</pre>
 </div>
 <div created="20200618015325531" modified="20200618015831623" tags="Python" title="How to add the 'Cc' field and 'Important flag' in an email sent by Python 3" type="text/x-markdown">
 <pre>```python
@@ -12418,12 +12420,10 @@ message['Cc'] = ''
 message['X-Priority'] = '2'
 ```</pre>
 </div>
-<div created="20200618090057764" creator="debby" modified="20200618092053273" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
+<div created="20200618090057764" creator="debby" modified="20200618092142127" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
 <pre>Hi, welcome to my digital garden. í ½í±‹
 
-I will provide better directions as content accumulates here.
-
-GettingStarted</pre>
+I will provide better directions as content accumulates here.</pre>
 </div>
 
 
