--- a/index.html
+++ b/index.html
@@ -12405,12 +12405,10 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
     }
 }</pre>
 </div>
-<div created="20200618091714228" creator="debby" modified="20200618092450868" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
+<div created="20200618091714228" creator="debby" modified="20200618092614247" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
 <pre>Many note-takers hoard content because it gives them an illusion of knowledge. The best way to truly understand anything is to use the generation effect: to produce your own content, in your own words, and to share it with the world to create a feedback loop.    Collect. Note-taking, raw snippets, Kindle highlights + personal commentary.    Connect. Link to previous notes. Do not keep orphan notes.    Create. Write 
 
-— via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator)
-
-[[in-text way of referring to a note|Actual title of the note]]</pre>
+— via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator)</pre>
 </div>
 <div created="20200618015325531" modified="20200618015831623" tags="Python" title="How to add the 'Cc' field and 'Important flag' in an email sent by Python 3" type="text/x-markdown">
 <pre>```python
