Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>í ¼í¼žTiddlyWiki â€” a non-linear personal web notebook</title>
+<title>TiddlyWiki â€” a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -276,8 +276,6 @@ Error message and password prompt
 <li>$:/tags/ViewTemplate</li>
 
 <li>$:/tags/ViewToolbar</li>
-
-<li>$:/temp/HidePluginWarning</li>
 
 <li>$:/temp/info-plugin</li>
 
@@ -12274,8 +12272,8 @@ exports.context = contextWidget;
 <div created="20200527084433269" modified="20200527084433732" title="$:/plugins/tobibeer/preview/defaults/delay">
 <pre>200</pre>
 </div>
-<div created="20200618012844720" creator="debby" modified="20200618085705647" modifier="debby" title="$:/SiteTitle">
-<pre>í ¼í¼žTiddlyWiki</pre>
+<div created="20200618012844720" creator="debby" modified="20200618093229714" modifier="debby" title="$:/SiteTitle">
+<pre>TiddlyWiki</pre>
 </div>
 <div caption="Words to never consider as CamelCase links" created="20150210172146298" creator="Stephen" description="Words that should never be considered as CamelCase wikiwords. Separate the individual words with commas (,)." modified="20200304200314967" modifier="Stephen" tags="tb ske" title="$:/sk/WhiteList">
 <pre>LeDoux,McCloud,McDonald,TiddlyWiki,TiddlyWiki5,CamelCase,DuBay,McGraw,McCullough,LeGrange,NaCl,MeOH,EtOH,PiB,TiddlyTools,ResetFind,WikiText,WinBuilder,WinPE,ProgramData,TiddlyFox,GuillermoMartin,AndrewFraser,RochesterMNwalkers,DEdwardsCalgary,WalkaboutMM,HarveyG,McCoy,GeForce,SideBar,AirBnB,PayPal,LeBron,JavaScript,ExpressJet,CutePDF,McClouds,McElroy,McGovern,TableHelper,ShadowTiddler,WikiWords</pre>
@@ -12286,8 +12284,8 @@ exports.context = contextWidget;
 <div created="20200618012853212" modified="20200618014955785" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
-<div created="20200527074355500" modified="20200618012835356" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Basics</pre>
+<div created="20200527074355500" creator="debby" modified="20200618093232617" modifier="debby" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
 <div created="20200618015239429" modified="20200618020319257" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
@@ -12295,19 +12293,19 @@ exports.context = contextWidget;
 <div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200618053011707" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200527074318200" creator="debby" modified="20200618093237310" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618085611859" creator="debby" list="TiddlyWiki $:/core/ui/SideBar/Recent [[From collector to creator]]" modified="20200618093054139" modifier="debby" title="$:/StoryList">
+<div created="20200618093214220" creator="debby" list="$:/ControlPanel $:/core/ui/MoreSideBar/All [[TiddlyBlink home]]" modified="20200618093226019" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12321,9 +12319,6 @@ exports.context = contextWidget;
 </div>
 <div created="20200127144249151" list="$:/.giffmex/ViewToolbar/new-note-here $:/.giffmex/ViewToolbar/new-note-here-datetime $:/.giffmex/viewtoolbar/viewrefs $:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/close $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold" modified="20200304200401109" tags="tb" title="$:/tags/ViewToolbar">
 <pre></pre>
-</div>
-<div created="20200618093049450" creator="debby" modified="20200618093049450" modifier="debby" title="$:/temp/HidePluginWarning">
-<pre>yes</pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
 <pre>{
@@ -13339,8 +13334,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618093058806" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>TiddlyBlink</pre>
+<div created="20200618014049220" creator="debby" modified="20200618093218924" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>How to add the 'Cc' field and 'Important flag' in an email sent by Python 3</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13489,13 +13484,11 @@ Below each tiddler (note card) is a list of links to any other tiddlers that lin
 
 &lt;span class=&quot;indent1&quot;&gt;&lt;$list filter=&quot;[is[system]tag[meta]sort[title]]&quot;&gt;&lt;$link&gt;&lt;$view field=&quot;caption&quot;/&gt;&lt;/$link&gt;&lt;br&gt;&lt;/$list&gt;&lt;/span&gt;</pre>
 </div>
-<div created="20200128030902225" modified="20200508004536320" tags="tb meta" title="TiddlyBlink home">
-<pre>&lt;span style=&quot;color:red&quot;&gt;Hi there! I have now replaced ~TiddlyBlink with [[Stroll|https://giffmex.org/stroll/stroll.html]], and highly recommend using Stroll instead of ~TiddlyBlink or its unpopular cousin Idea Stew. Nevertheless I will leave this here since there will no doubt be holdouts who prefer ~TiddlyBlink.&lt;/span&gt;
-
-&lt;&lt;tabs &quot;TiddlyBlink .topicList .sourcesList .hideList&quot; &quot;TiddlyBlink&quot; &gt;&gt;</pre>
+<div created="20200128030902225" creator="debby" modified="20200618093204659" modifier="debby" tags="tb meta" title="TiddlyBlink home">
+<pre>&lt;&lt;tabs &quot;TiddlyBlink .topicList .sourcesList .hideList&quot; &quot;TiddlyBlink&quot; &gt;&gt;</pre>
 </div>
 <div created="20200618090057764" creator="debby" modified="20200618092142127" modifier="debby" tags="" title="Welcome" type="text/x-markdown">
-<pre>Hi, welcome to my digital garden. í ½í±‹
+<pre>Hi, welcome to my digital garden. ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 
 I will provide better directions as content accumulates here.</pre>
 </div>
