--- a/index.html
+++ b/index.html
@@ -493,8 +493,6 @@ Error message and password prompt
 
 <li>$:/view</li>
 
-<li>Test</li>
-
 <li>TiddlyBlink</li>
 
 <li>TiddlyBlink home</li>
@@ -12301,7 +12299,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="Test" title="$:/StoryList">
+<div created="20200618093641459" creator="debby" list="" modified="20200618093641459" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13447,9 +13445,6 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20200127165334843" creator="debby" modified="20200618093450051" modifier="debby" tags="tb" title="$:/view">
 <pre>horizontal</pre>
-</div>
-<div created="20200618093617584" creator="debby" modified="20200618093638265" modifier="debby" tags="" title="Test" type="text/x-markdown">
-<pre>[[GettingStarted]]</pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
