Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154</li>
 
+<li>$:/state/tab--1190666861</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -496,6 +498,8 @@ Error message and password prompt
 <li>TiddlyBlink</li>
 
 <li>TiddlyBlink home</li>
+
+<li>TiddlyBlink is not maintained anymore</li>
 
 </ul>
 </p>
@@ -12275,6 +12279,9 @@ exports.context = contextWidget;
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
 </div>
+<div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
+<pre>TiddlyBlink</pre>
+</div>
 <div created="20200618012853212" creator="debby" modified="20200618093456470" modifier="debby" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
@@ -12299,7 +12306,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618093641459" creator="debby" list="[[TiddlyBlink home]]" modified="20200618093939003" modifier="debby" title="$:/StoryList">
+<div created="20200618093641459" creator="debby" list="[[TiddlyBlink is not maintained anymore]]" modified="20200618094150319" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13328,7 +13335,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618094048248" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200618014049220" creator="debby" modified="20200618094153450" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>TiddlyBlink home</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
@@ -13467,6 +13474,11 @@ Below each tiddler (note card) is a list of links to any other tiddlers that lin
 </div>
 <div created="20200128030902225" creator="debby" modified="20200618093204659" modifier="debby" tags="tb meta" title="TiddlyBlink home">
 <pre>&lt;&lt;tabs &quot;TiddlyBlink .topicList .sourcesList .hideList&quot; &quot;TiddlyBlink&quot; &gt;&gt;</pre>
+</div>
+<div created="20200618094249392" creator="debby" modified="20200618094442314" modifier="debby" tags="" title="TiddlyBlink is not maintained anymore">
+<pre>[[TiddlyBlink]] is not maintained anymore. Would building a digital garden on top of it be precarious?
+
+</pre>
 </div>
 
 
