Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -495,11 +495,11 @@ Error message and password prompt
 
 <li>$:/view</li>
 
+<li>From collector to creator</li>
+
 <li>TiddlyBlink</li>
 
 <li>TiddlyBlink home</li>
-
-<li>TiddlyBlink is not maintained anymore</li>
 
 </ul>
 </p>
@@ -12306,7 +12306,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618093641459" creator="debby" list="[[TiddlyBlink is not maintained anymore]]" modified="20200618094150319" modifier="debby" title="$:/StoryList">
+<div created="20200618093641459" creator="debby" list="[[From collector to creator]]" modified="20200618094450719" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13335,8 +13335,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618094153450" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>TiddlyBlink home</pre>
+<div created="20200618014049220" creator="debby" modified="20200618094503943" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>TiddlyBlink</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13453,6 +13453,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200127165334843" creator="debby" modified="20200618093450051" modifier="debby" tags="tb" title="$:/view">
 <pre>horizontal</pre>
 </div>
+<div created="20200618094249392" creator="debby" modified="20200618094731252" modifier="debby" tags="" title="From collector to creator">
+<pre>Many note-takers hoard content because it gives them an illusion of knowledge. The best way to truly understand anything is to use the generation effect: to produce your own content, in your own words, and to share it with the world to create a feedback loop.    Collect. Note-taking, raw snippets, Kindle highlights + personal commentary.    Connect. Link to previous notes. Do not keep orphan notes.    Create. Write original article.
+
+— via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) [[+Roam]]</pre>
+</div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
 
@@ -13474,11 +13479,6 @@ Below each tiddler (note card) is a list of links to any other tiddlers that lin
 </div>
 <div created="20200128030902225" creator="debby" modified="20200618093204659" modifier="debby" tags="tb meta" title="TiddlyBlink home">
 <pre>&lt;&lt;tabs &quot;TiddlyBlink .topicList .sourcesList .hideList&quot; &quot;TiddlyBlink&quot; &gt;&gt;</pre>
-</div>
-<div created="20200618094249392" creator="debby" modified="20200618094442314" modifier="debby" tags="" title="TiddlyBlink is not maintained anymore">
-<pre>[[TiddlyBlink]] is not maintained anymore. Would building a digital garden on top of it be precarious?
-
-</pre>
 </div>
 
 
