--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154</li>
 
+<li>$:/state/showeditpreview</li>
+
 <li>$:/state/tab--1190666861</li>
 
 <li>$:/state/tab--1963855381</li>
@@ -12279,6 +12281,9 @@ exports.context = contextWidget;
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
 </div>
+<div created="20200618095006136" creator="debby" modified="20200618095007862" modifier="debby" title="$:/state/showeditpreview">
+<pre>no</pre>
+</div>
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
 </div>
@@ -12306,7 +12311,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618093641459" creator="debby" list="[[From collector to creator]]" modified="20200618094450719" modifier="debby" title="$:/StoryList">
+<div created="20200618093641459" creator="debby" list="$:/core/ui/SideBar/Recent [[From collector to creator]]" modified="20200618094926751" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13335,8 +13340,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618094503943" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>TiddlyBlink</pre>
+<div created="20200618014049220" creator="debby" modified="20200618094927173" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>From collector to creator</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13453,7 +13458,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200127165334843" creator="debby" modified="20200618093450051" modifier="debby" tags="tb" title="$:/view">
 <pre>horizontal</pre>
 </div>
-<div created="20200618094249392" creator="debby" modified="20200618094905378" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
+<div created="20200618094249392" creator="debby" modified="20200618095052710" modifier="debby" tags="Note-taking" title="From collector to creator" type="text/x-markdown">
 <pre>Many note-takers hoard content because it gives them an illusion of knowledge. The best way to truly understand anything is to use the generation effect: to produce your own content, in your own words, and to share it with the world to create a feedback loop.    
 
 - **Collect.** Note-taking, raw snippets, Kindle highlights + personal commentary.    
