Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>TiddlyWiki â€” a non-linear personal web notebook</title>
+<title>í ¼í¼žTiddlyWiki â€” a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -798,7 +798,7 @@ Click here: {{$:/core/ui/Buttons/palette}}
 
 &lt;/span&gt;</pre>
 </div>
-<div caption="search results in context" created="20200102141715979" modified="20200304195344624" tags="tb refs" title="$:/.giffmex/ViewTemplate/refscontext">
+<div caption="search results in context" created="20200102141715979" creator="debby" modified="20200618095403526" modifier="debby" tags="tb refs $:/tags/ViewTemplate" title="$:/.giffmex/ViewTemplate/refscontext">
 <pre>\define mycrit() (?i)\b$(searchspx)$\b
 
 &lt;hr&gt;References: 
@@ -809,7 +809,7 @@ Click here: {{$:/core/ui/Buttons/palette}}
 &lt;/$vars&gt;
 </pre>
 </div>
-<div caption="links" created="20200126143031898" modified="20200304195352126" tags="tb refs $:/tags/ViewTemplate" title="$:/.giffmex/ViewTemplate/refslinks">
+<div caption="links" created="20200126143031898" creator="debby" modified="20200618095403526" modifier="debby" tags="refs tb" title="$:/.giffmex/ViewTemplate/refslinks">
 <pre>\define mycrit() (?i)\b$(searchspx)$\b
 
 &lt;hr&gt;References: 
@@ -820,7 +820,7 @@ Click here: {{$:/core/ui/Buttons/palette}}
 &lt;/$vars&gt;
 </pre>
 </div>
-<div caption="simple transclusion" created="20200126142157739" modified="20200304195401578" tags="tb refs" title="$:/.giffmex/ViewTemplate/refstranscludeclean">
+<div caption="simple transclusion" created="20200126142157739" creator="debby" dummy="yes" modified="20200618095200580" modifier="debby" tags="refs tb" title="$:/.giffmex/ViewTemplate/refstranscludeclean">
 <pre>&lt;hr&gt;
 
 References: &lt;br&gt;
@@ -12272,8 +12272,8 @@ exports.context = contextWidget;
 <div created="20200527084433269" modified="20200527084433732" title="$:/plugins/tobibeer/preview/defaults/delay">
 <pre>200</pre>
 </div>
-<div created="20200618012844720" creator="debby" modified="20200618093229714" modifier="debby" title="$:/SiteTitle">
-<pre>TiddlyWiki</pre>
+<div created="20200618012844720" creator="debby" modified="20200618095344217" modifier="debby" title="$:/SiteTitle">
+<pre>í ¼í¼žTiddlyWiki</pre>
 </div>
 <div caption="Words to never consider as CamelCase links" created="20150210172146298" creator="Stephen" description="Words that should never be considered as CamelCase wikiwords. Separate the individual words with commas (,)." modified="20200304200314967" modifier="Stephen" tags="tb ske" title="$:/sk/WhiteList">
 <pre>LeDoux,McCloud,McDonald,TiddlyWiki,TiddlyWiki5,CamelCase,DuBay,McGraw,McCullough,LeGrange,NaCl,MeOH,EtOH,PiB,TiddlyTools,ResetFind,WikiText,WinBuilder,WinPE,ProgramData,TiddlyFox,GuillermoMartin,AndrewFraser,RochesterMNwalkers,DEdwardsCalgary,WalkaboutMM,HarveyG,McCoy,GeForce,SideBar,AirBnB,PayPal,LeBron,JavaScript,ExpressJet,CutePDF,McClouds,McElroy,McGovern,TableHelper,ShadowTiddler,WikiWords</pre>
@@ -12290,8 +12290,8 @@ exports.context = contextWidget;
 <div created="20200618012853212" creator="debby" modified="20200618093456470" modifier="debby" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20200527074355500" creator="debby" modified="20200618093232617" modifier="debby" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
+<div created="20200527074355500" creator="debby" modified="20200618095335318" modifier="debby" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
 <div created="20200618015239429" creator="debby" modified="20200618093352763" modifier="debby" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
@@ -12299,7 +12299,7 @@ exports.context = contextWidget;
 <div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200618093530399" modifier="debby" title="$:/state/tab-1749438307">
+<div created="20200527074318200" creator="debby" modified="20200618095333254" modifier="debby" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
@@ -12311,7 +12311,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ã„Ž" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200618093641459" creator="debby" list="$:/core/ui/SideBar/Recent [[From collector to creator]]" modified="20200618094926751" modifier="debby" title="$:/StoryList">
+<div created="20200618093641459" creator="debby" list="$:/core/ui/SideBar/Recent [[TiddlyBlink home]] TiddlyBlink" modified="20200618095355245" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13340,8 +13340,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200618094927173" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>From collector to creator</pre>
+<div created="20200618014049220" creator="debby" modified="20200618095404926" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>TiddlyBlink</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
